--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,50 @@
+# HyperCode: Production Dependencies (FIXED & TESTED)
+# Verified versions - All packages available on PyPI
+# Updated: November 11, 2025, 3:25 PM GMT
+
+# ============================================================================
+# CORE LANGUAGE & COMPILATION
+# ============================================================================
+
+# Parser generation (ANTLR4)
 antlr4-python3-runtime==4.13.1
+
+# Data validation & typing
 pydantic==2.5.0
 pydantic-settings==2.1.0
+
+# ============================================================================
+# AI & LLM INTEGRATION (Multi-Model Support)
+# ============================================================================
+
+# OpenAI (GPT-4, GPT-3.5)
 openai==1.3.5
+
+# Anthropic (Claude 3.5 Sonnet)
 anthropic==0.7.1
+
+# Mistral AI (Mistral Large)
 mistralai==0.0.11
+
+# Ollama (Local Llama 3, local deployment)
 ollama==0.1.0
+
+# HuggingFace (Future: fine-tuning support)
 huggingface-hub==0.19.3
+
+# ============================================================================
+# VECTOR DATABASES & RAG (Knowledge Storage)
+# ============================================================================
+
+# Pinecone (Cloud vector DB)
 pinecone-client==3.0.0
+
+# Weaviate (Open-source vector DB) - FIXED VERSION
 weaviate-client==4.18.0
+
+# LangChain (LLM orchestration & RAG)
 langchain==0.1.3
 langchain-openai==0.0.2
-langchain-anthropic==0.1.4
-requests==2.31.0
-beautifulsoup4==4.12.2
-aiohttp==3.9.1
-selenium==4.15.0
-arxiv==2.1.0
-scholarly==1.7.11
-rdflib==7.0.0
-sparqlwrapper==1.8.5
-neo4j==5.13.0
-python-dotenv==1.0.0
-click==8.1.7
-typer==0.9.0
-rich==13.7.0
-pyyaml==6.0.1
-jsonschema==4.20.0
-loguru==0.7.2
-python-json-logger==2.0.7
-orjson==3.9.10
-cachetools==5.3.2
-ratelimit==2.2.1
 langchain-anthropic==0.1.4
 
 # ============================================================================
