--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,7 +6,7 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-added-large-files
-        args: [--maxkb=500]
+        args: [--maxkb=500, "--exclude=vscode-extension/node_modules/"]
       - id: debug-statements
       - id: requirements-txt-fixer
 
