--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,19 @@ dev = [
     "mypy>=1.0.0",
     "pytest>=7.0.0",
     "pytest-cov>=4.0.0",
+    "pytest-mock>=3.10.0",
+    "pytest-xdist>=3.0.0",
     "pre-commit>=3.0.0",
+    "psutil>=5.9.0",
+    "bandit>=1.7.0",
+    "safety>=2.3.0",
+    "sphinx>=5.0.0",
+    "mkdocs>=1.4.0",
+    "mkdocs-material>=8.5.0",
+    "requests>=2.28.0",
+    "pydantic>=1.10.0",
+    "aiohttp>=3.8.0",
+    "python-dotenv>=0.19.0",
 ]
 
 [tool.ruff]
