--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,56 +1,113 @@
-[build-system]
+﻿[build-system]
 requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "hypercode"
-version = "0.1.0"
-description = "HyperCode - A modern code processing framework"
-readme = "README.md"
-requires-python = ">=3.8"
-license = {text = "MIT"}
+version = "1.0.0"
+description = "Neurodivergent-first programming language with universal AI compatibility"
 authors = [
-    {name = "Your Name", email = "your.email@example.com"}
+    {name = "Lyndon Williams (welshDog)", email = "lyndzwills@gmail.com"}
 ]
+readme = "README.md"
+requires-python = ">=3.9"
+license = {text = "MIT"}
+keywords = ["programming-language", "neurodivergent", "accessibility", "ai", "spatial-reasoning"]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "Intended Audience :: Education",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Topic :: Software Development :: Compilers",
+    "Topic :: Scientific/Engineering :: Artificial Intelligence",
+    "Topic :: Education",
+]
+
 dependencies = [
-    # Add your main dependencies here
+    "aiohttp>=3.9.0",
+    "pydantic>=2.5.0",
+    "python-dotenv>=1.0.0",
+    "requests>=2.31.0",
+    "typing-extensions>=4.9.0",
+    # AI providers
+    "anthropic>=0.7.0",  # Claude
+    "openai>=1.6.0",     # OpenAI/GPT
+    "mistralai>=0.0.11", # Mistral
+    "ollama>=0.6.0",     # Local Ollama
+    # Knowledge graph
+    "networkx>=3.2",
+    "rdflib>=7.0.0",
+    # Data processing
+    "numpy>=2.0.0",
+    "pandas>=2.0.0",
+    # Web framework
+    "fastapi>=0.104.0",
+    "uvicorn>=0.24.0",
 ]
 
 [project.optional-dependencies]
 dev = [
-    "black>=23.0.0",
-    "ruff>=0.0.270",
-    "mypy>=1.0.0",
-    "pytest>=7.0.0",
-    "pytest-cov>=4.0.0",
-    "pytest-mock>=3.10.0",
-    "pytest-xdist>=3.0.0",
-    "pre-commit>=3.0.0",
-    "psutil>=5.9.0",
-    "bandit>=1.7.0",
-    "safety>=2.3.0",
-    "sphinx>=5.0.0",
-    "mkdocs>=1.4.0",
-    "mkdocs-material>=8.5.0",
-    "requests>=2.28.0",
-    "pydantic>=1.10.0",
-    "aiohttp>=3.8.0",
-    "python-dotenv>=0.19.0",
+    "pytest>=7.4.3",
+    "pytest-cov>=4.1.0",
+    "pytest-asyncio>=0.21.1",
+    "pytest-mock>=3.15.0",
+    "black>=23.12.1",
+    "ruff>=0.1.9",
+    "mypy>=1.8.0",
+    "pre-commit>=3.6.0",
+    "bandit>=1.7.6",
+    "safety>=3.0.0",
+    "pip-audit>=2.9.0",
+    "coverage>=7.11.0",
+    "mkdocs-material>=9.1.0",
+    "mkdocs-git-revision-date-plugin>=1.2.0",
+    "sphinx>=7.2.0",
+    "sphinx-rtd-theme>=2.0.0",
 ]
 
-[tool.ruff]
-line-length = 88
-target-version = "py38"
-select = ["E", "F", "I", "N", "W", "B", "C4", "SIM", "TCH", "ARG", "PTH"]
+accessibility = [
+    "beautifulsoup4>=4.12.0",
+    "wcag-validators>=0.1.0",
+]
+
+research = [
+    "arxiv>=2.3.0",
+    "scholarly>=1.7.0",
+    "langchain>=0.3.0",
+    "langchain-openai>=0.3.0",
+    "langchain-anthropic>=0.3.0",
+]
+
+[project.scripts]
+hypercode = "src.hypercode.__main__:main"
+
+[tool.setuptools.packages.find]
+where = ["src", "ai_gateway", "accessibility"]
 
 [tool.black]
-line-length = 88
-target-version = ['py38']
-include = '\.pyi?$'
+line-length = 100
+target-version = ['py39', 'py310', 'py311', 'py312']
+
+[tool.ruff]
+line-length = 100
+target-version = "py39"
 
 [tool.mypy]
-python_version = "3.8"
+python_version = "3.9"
 warn_return_any = true
 warn_unused_configs = true
-disallow_untyped_defs = true
-ignore_missing_imports = true
+disallow_untyped_defs = false
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = "test_*.py"
+python_functions = "test_*"
+addopts = "-v --cov=src --cov=ai_gateway --cov=accessibility"
+
+[tool.bandit]
+exclude_dirs = ["/tests", "/docs", "/examples"]
