🚀 PRODUCTION READY: Complete Infrastructure & Launch Preparation
✅ Security scanning pipeline (Bandit, Safety, Pip-Audit)
✅ Reproducible builds with requirements.lock
✅ Professional documentation with docstrings
✅ AI-optimized syntax examples across domains
✅ Comprehensive launch materials
✅ Infrastructure reports and health scans

HyperCode v1.0.0 - Production-Ready Neurodivergent-First Programming Language

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,28 +71,28 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
-      
+          python-version: "3.11"
+
       - name: Install security tools
         run: |
           pip install bandit safety pip-audit
-      
+
       - name: Run Bandit (security linter)
         run: bandit -r src/ ai_gateway/ accessibility/ -f json -o bandit-report.json
         continue-on-error: true
-      
+
       - name: Run Safety (vulnerability scanner)
         run: safety check --json
         continue-on-error: true
-      
+
       - name: Run pip-audit (dependency audit)
         run: pip-audit --require-hashes --desc
         continue-on-error: true
-      
+
       - name: Upload security reports
         uses: actions/upload-artifact@v4
         with:
