Add interactive architecture visualization and update core components
- Add new index.html with interactive node-based architecture visualization
- Update core components: parser, AST, lexer, error handler, tokens
- Add MCP (Model Context Protocol) server infrastructure
- Add VSCode extension improvements and packaging
- Add HyperCode 2.0V roadmap and comparison data
- Add various development tools and test files
- Update documentation and status reports

--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -81,5 +81,20 @@
     "@vscode/vsce": "^3.7.0",
     "typescript": "^5.0.0",
     "vsce": "^2.15.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/welshDog/hypercode.git",
+    "directory": "vscode-extension"
+  },
+  "homepage": "https://github.com/welshDog/hypercode/tree/main/vscode-extension",
+  "bugs": {
+    "url": "https://github.com/welshDog/hypercode/issues"
+  },
+  "license": "MIT",
+  "icon": "icon.png",
+  "galleryBanner": {
+    "color": "#1e1e1e",
+    "theme": "dark"
   }
 }
