--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,11 @@ ENV/
 
 # IDE specific files
 .idea/
-.vscode/
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
 *.swp
 *.swo
 *~
@@ -53,9 +57,6 @@ htmlcov/
 .env.test.local
 .env.production.local
 
-# Build files
-build/
-
 # Jupyter Notebook
 .ipynb_checkpoints
 
@@ -75,35 +76,13 @@ config/*.json
 !config/*.example.json
 !config/*.template.json
 
-# Node modules (if any)
+# Node modules
 node_modules/
 
 # Local development
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
-
-# Virtual environment
-venv/
-ENV/
-
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
 
 # PyInstaller
 *.manifest
@@ -117,7 +96,6 @@ pip-delete-this-directory.txt
 htmlcov/
 .tox/
 .nox/
-.coverage
 .coverage.*
 .cache
 nosetests.xml
@@ -125,7 +103,6 @@ coverage.xml
 *.cover
 *.py,cover
 .hypothesis/
-.pytest_cache/
 
 # Translations
 *.mo
@@ -148,9 +125,6 @@ docs/_build/
 
 # PyBuilder
 target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
 
 # IPython
 profile_default/
@@ -195,3 +169,49 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+
+# VS Code Extension
+.vscode-extension/
+.vscode-test/
+out/
+*.vsix
+
+# Node.js
+node_modules/
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+
+# Build files
+dist/
+build/
+coverage/
+
+# TypeScript
+*.tsbuildinfo
+
+# Python virtual environment
+venv/
+ENV/
+
+# Python bytecode
+*.pyc
+__pycache__/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Project specific
+.windsurf/
+*.pdf
+*.png
+*.csv
+*.bak
+*.backup
+*.log
+*.tmp
+*.temp
+*~
